--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,14 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+# GSS Wrapper Edition
+#   Ignore all directories inside gss_wrapper except for jupyter notebooks
+gss_wrapper/*/
+!gss_wrapper/jupyter/
+
+# Ignore all .txt files inside of gss_wrapper
+gss_wrapper/*.txt
+
 # C extensions
 *.so
 
